--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Age Calculator</title>
+  <script src="node_modules/moment/moment.js"></script>
+  <script>
+      moment().format();
+  </script>
 </head>
 <body>
   <main>
-    <form id="date_fm">
+    <form id="date_fm" action="">
       <div id="inputs">
         <div>
           <label for="day">DAY</label>
@@ -38,6 +42,6 @@
       <p><span class="output" id="day">--</span> days</p>
     </div>
   </main>
-  <script type="module" src="main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
